<resources>

    <!-- MAIN LAUNCH RESOURCES -->
    <string name="app_name">NUMAD-JamesHardy</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome To My App!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_title">James Hardy</string>
    <string name="title_activity_team_members">Team Members</string>
    <string name="team_members_button_title">Team Members</string>
    <string name="team_member_1_name">James Hardy</string>
    <string name="team_member_1_email">hardy.ja@husky.neu.edu</string>
    <string name="team_member_photo_desc">team member 1</string>
    <string name="sudoku_button_title">Sudoku</string>
    <string name="boggle_button_title">Boggle</string>
    <string name="crash_button_title">Crash App</string>
    <string name="title_activity_crash">CrashActivity</string>
    <string name="exit_button_label">Exit</string>
    <string name="final_proj_button">Final Project</string>
    <string name="final_proj_screen_title">SOAP</string>
    <string name="final_proj_screen">\
Soap. Clean hands and a clean conscience.\n\n
How clean are your hands? If you can\'t answer that, then you need Soap.\n\n
With Soap, you\'ll have aggregated data on your daily hand washing habits. 
You can export this data by email, and easily analyze it. This means it\'s 
great for hospitals and other institutions.\n\n\n
Soap Features:\n- A monitoring service that runs during user-defined periods\n
- An easy way to signal a hand washing event - simply tap your phone with the 
screen off\n- Automatic saving of daily hand washing data to a CSV spreadsheet 
and quick exportation by email\n\nTo get started with Soap, just download it 
and set up the automatic monitoring times. Then when you want to signal that 
you\'ve washed your hands, just tap your phone\'s screen twice when the screen 
is off. The phone will vibrate indicating that it\'s detected the signal. 
Tap once more for confirmation, and you\'re all set!\n\n\n</string>

    <!-- SUDOKU RESOURCES -->
    <string name="sudoku_main_title">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="sudoku_settings_label">Settings...</string>
    <string name="sudoku_settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="sudoku_new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="sudoku_about_title">About Android Sudoku</string>
    <string name="about_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.</string>

    <!-- BOGGLE RESOURCES -->
    <string name="boggle_main_title">Boggle on Droids</string>
    <string name="boggle_game_title">Boggle</string>
    <string name="boggle_pause_title">Game Paused!</string>
    <string name="boggle_new_game_title">Grid Size</string>
    <string name="boggle_settings_title">Grid Size</string>
    <string name="mp_boggle_single_player">Single Player</string>
    <string name="mp_boggle_set_board_size">Set Board Size</string>
    <string name="mp_boggle_rules_button_title">Rules</string>
    <string name="mp_boggle_high_score">High Scores</string>
    <string name="mp_boggle_create_user_title">Create Username / Login</string>
    <string name="boggle_new_game_button_title">New Game</string>
    <string name="mp_boggle_challenge_user_title">Choose an Opponent</string>
    <string name="boggle_enter_button_title">ENTER</string>
    <string name="mp_boggle_challenge_button_title">Challenge Someone</string>
    <string name="boggle_resume_game_button_title">Resume Game</string>
    <string name="boggle_acknowledgements_button_title">Acknowledgements</string>
    <string name="four_label">4 X 4</string>
    <string name="five_label">5 X 5</string>
    <string name="six_label">6 X 6</string>
    <string name="boggle_resume">RESUME</string>
    <string name="boggle_quit">QUIT</string>
    <string name="boggle_new_game">NEW GAME</string>
    <string name="boggle_settings_button_label">Settings</string>
    <string name="title_activity_boggle_acknowledgements">Boggle Acknowledgements</string>
    <string name="boggle_time_up">Time\'s UP!</string>
    <string name="boggle_pause">Paused!</string>
    <string name="multiplayer_boggle_button_title">Multiplayer Boggle</string>
    <string name="boggle_acknowledgements">\
I would like to acknowledge the creators of
the sample code within the Android SDK. For
example the writers of <i>FingerPainting</i>.
I would also like to acknowledge the Android 
developer\'s website for their sample code in
SQLite, local storage, and 2D graphics. I would
like to thank freesounds.org for their audio.
Finally, I would like to thank the creators 
and writers of <i>Hello, Android</i> for 
their Sudoku code, which we have sampled. </string>
    <string name="mp_boggle_rules">\
The rules are fairly simple. Sign in as you
already have. Then you can choose to play single
player or multi player. Both will work to help your
high score. When choosing an opponent, simply
click on the person you would like to play
against. A message will be sent to them and
when they accept, your game will begin. There
is 1 point for the first three letters in any
word and another point for each letter following.
Can not use the same word twice. </string>

    <!-- SOAP RESOURCES -->
    <string name="soap_app_name">MAD_SOAP</string>
    <string name="soap_main_button">Trickiest Part</string>
    <string name="soap_start_service">START MONITORING</string>
    <string name="soap_main_label">S  O  A  P</string>
    <string name="soap_kill_service">STOP MONITORING</string>
    <string name="soap_ack_button_title">Acknowledgements</string>
    <string name="soap_title_acknowledgements">SOAP Information</string>
    <string name="soap_acknowledgements">\
<b>Instructions:</b>\n\n
\tVisit the <i>User Settings</i> page to set automatic 
sensing of hand washing when the screen is off. Or 
simply hit the <i>Start Monitor</i> button. If you want 
to turn this monitor off, hit <i>Stop Monitor</i>. When 
sensing is turned on and the screen is off, tap 
until you feel it vibrate (three times), then tap again for a 
double vibrate. The double vibration means the phone 
has sensed you washed your hands. Use the <i>Export 
Data</i> button to send the day\'s data to a specified 
email address. It will send a CSV Excel spreadsheet.\n\n 
<b>Acknowledgements:</b>\n\n\tWe would like to acknowledge 
user MyLock on StackOverflow for providing us answers 
and code in order to keep our service running when the 
screen locks and shuts off. Other examples on StackOverflow were also helpful.
Thank you to apple
for high pass filter code (adapted from Obj-C) so that we could 
eliminate gravity from the accelerometer readings. 
Thank you to the Christian Service Center for their
soap image. Thank you to the CSVopensource project
and their API for easily creating excel combatible
files. Thanks to http://ttfonts.net/ for providing ttf font files. 
Thanks to Android Asset Studio for providing awesome button icons and colors. 
And thank you to AndroidGenuine for 
the accelerometer tutorial. \n\nWe tested our app 
on the following devices:\n\nMotorola Droid Bionic
\nHTC Droid DNA\n</string>
 	<string name="soap_settings_button">SOAP SETTINGS</string>
 	<string name="soap_export_data_button">EXPORT DATA</string>
 	<string name="soap_settings_title">SETTINGS</string>
 	<string name="soap_settings_label">Soap Settings</string>
 	<string name="soap_auto_monitor_checkbox_text_top">Auto Monitor</string>
 	<string name="soap_auto_monitor_checkbox_text_bottom">
 	    Taps will be monitored during set period
 	</string>
 	<string name="soap_circle_button_text">W A S H</string>
 	<string name="soap_auto_export_text_top">Export Reminder</string>
 	<string name="soap_auto_export_text_bottom">
 	    Remind me to export daily wash data
	</string>
	<string name="soap_default_email_text">example@gmail.com</string>
	<string name="soap_export_default_email_label">Default export email address</string>
	<string name="soap_settings_help_text">
	    \tSelect Auto monitor if you want Soap to automatically monitor your taps on the phone
	    at specific times, such as your work day. To select the time range, choose a start day and an end day
	    and a start and end time for each day (ex. Mon - Fri, 9am - 5pm)
	    \n\n\tExport Reminder will pop up a notification to remind you to export your data at the end of the day
	    \n\n\tAdd a default email so that you won\'t have to provide it each time you export data.
	</string>
	<string name="soap_unwash_button_text">Undo Wash</string>

</resources>